breadcrumb url spacing fixes

--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ body{font-family: 'Manrope', sans-serif;font-weight: 500;color: var(--common-gra
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: calc(100vh - 125px);
 }
 .login-wrapper >  div{
   box-shadow: 0px 0px 15px #eee;
